# classifier

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  coding-workflow.md  pyproject.toml
.claude/: settings.json
.claude/standards/: wiki.md
.github/workflows/: format-lint.yml  openwiki-update.yml  type-check.yml  unit-tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_replace_matter_folder_with_folder_path.py
openwiki/: .last-update.json  GENERATED.md  index.md  quickstart.md  testing.md
openwiki/architecture/: index.md  overview.md
openwiki/domain/: category-parsing.md  document-sources.md  index.md  self-consistency.md  text-extraction.md
openwiki/operations/: configuration.md  error-handling.md  index.md
openwiki/workflows/: classification-pipeline.md  index.md
spec/: spec.md
spec/adr/: 0001-llm-based-classification.md  0002-model-haiku-4-5.md  0003-cli-batch-interface.md  0004-csv-file-output.md  0005-confidence-self-consistency.md  0006-text-extraction-per-format-libs.md  0007-sharepoint-app-only-auth.md  0008-prompt-structured-output.md  0009-defer-legacy-doc-extraction.md  (+11 more)
src/: categories.py  classifier.py  config.py  db.py  errors.py  extraction.py  graph_client.py  main.py  message_queue.py  models.py  self_consistency.py  sources.py  writer.py
tests/: conftest.py  test_categories.py  test_classifier.py  test_config.py  test_db.py  test_extraction.py  test_graph_client.py  test_main.py  test_message_queue.py  test_models.py  test_self_consistency.py  test_sources.py  test_writer.py
