[project]
name = "classifier"
version = "0.1.0"
description = "classifier"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0,<2.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ARG", "SIM", "ERA", "PLR", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Test assertions compare against literal expected values by design.
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.14"
files = ["src"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
